welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:13: error: not found: value Direction
	Direction.EST();
        ^ZigZag:18: error: not found: value Direction
	Direction.OUEST();
        ^ZigZag:22: error: type mismatch;
 found   : Unit
 required: Boolean
		if (d())
                     ^ZigZag:26: error: not found: value y
				setPos(x,y+1)
                                         ^ZigZag:17: error: method d is defined twice
  conflicting symbols both originated in file 'plm.runtime134.ZigZag'
def d(){
    ^ZigZag:31: error: not found: value g
		if (g())
                    ^ZigZag:35: error: not found: value y
				setPos(x,y+2)
                                         ^